fix: align title and subtitle text in info component

--- a/web/src/components/features/info/info.scss
+++ b/web/src/components/features/info/info.scss
@@ -15,7 +15,8 @@
     padding: 2.5%;
 
     #title {
-      text-align: center;
+      text-align: left;
+      white-space: nowrap;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -25,9 +26,11 @@
       font-size: 150%;
       width: 100%;
       font-weight: 400;
+
     }
     #subtitle {
-      text-align: center;
+      text-align: right;
+      white-space: nowrap;
       display: flex;
       flex-direction: column;
       align-items: center;
